--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     </div>
     <div class="work-text">
       <h2>work</h2>
-  <p>I’ve been through various workplaces. My first job was the Summer Youth at Marathon in 2021 where I worked in the Ops Excellence Department. My second job was at Uncle Tetsu in 2023 working as a Bakers Assistant where I baked Japanese cheesecakes and sold cakes to customers. At the end of the year in 2023, I got rehired back at Marathon as a Computer Systems Administrator. In July 2024, I started interning at LMNL Dance Studio as one of their video editors. LMNL Space and Marathon are places that I currently work at.</p>
+  <p>I’ve been through various workplaces. My first job was the Summer Youth at Marathon in 2021 where I worked in the Ops Excellence Department. My second job was at Uncle Tetsu in 2023 working as a Bakers Assistant where I baked Japanese cheesecakes and sold cakes to customers. At the end of the year in 2023, I got rehired back at Marathon as a Computer Systems Administrator. In July 2024, I started interning at LMNL Dance Studio as one of their video editors. My most recent workplaces were LMNL Space and Marathon where I ended in May of 2025.</p>
     </div>
   </div>
 </section>
