Initial website push

--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
       <div class="modal-content">
         <button class="modal-close">&times;</button>
         <h3>Cafe Sumire Ticketing System</h3>
-        <p>I developed a full-stack ticketing platform for Café Sumire using Node.js on the backend, Docker containers for consistent environments, and Render.com for seamless cloud deployment. The system exposes a RESTful API for creating, updating, and tracking customer tickets, while a responsive HTML/CSS/JavaScript frontend gives café staff an intuitive interface to manage orders in real time. I orchestrated services with Docker Compose, configured network routing and secure HTTPS endpoints, and tuned firewall rules to ensure reliable, secure communication between microservices and the web client. This solution streamlined the café’s order workflow, reduced service bottlenecks, and highlights my expertise in backend and frontend development, containerization, cloud deployment, and network configuration.</p>
+        <p>I developed a full-stack ticketing platform for Café Sumire using Node.js on the backend, Docker containers for consistent environments, and Render.com for seamless cloud deployment. The system exposes a RESTful API for creating, updating, and tracking customer tickets, while a responsive HTML/CSS/JavaScript frontend gives café staff an intuitive interface to manage orders in real time. I orchestrated services with Docker Compose, configured network routing and secure HTTPS endpoints, and tuned firewall rules to ensure reliable, secure communication between microservices and the web client. This solution streamlined the café’s order workflow, reduced service bottlenecks, and highlights my expertise in backend and frontend development, containerization, cloud deployment, and network configuration. The website is located at https://cafe-sumire-ticketing.onrender.com/barista.html </p>
         <div class="modal-gallery">
           <img src="ticket/cashier1.png" alt="">
           <img src="ticket/cashier2.png" alt="">
@@ -386,8 +386,8 @@
     <div class="footer-section">
       <h4>Contact</h4>
       <p>
-        📧 <a href="mailto:rick.unite@example.com">rick.unite@example.com</a><br>
-        📞 <a href="tel:+1234567890">(123) 456-7890</a><br>
+        📧 <a href="mailto:runite02@gmail.com">runite02@gmail.com</a><br>
+        📞 <a href="tel:+1234567890">(310) 503-1802</a><br>
         📸 Instagram: <a href="https://instagram.com/_sic.rick_" target="_blank">@_sic.rick_</a>
       </p>
     </div>
