Added pictures for Cafesumire and Ako Project

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
      <!-- Project #7 -->
   <div class="project-item">
     <div class="project-card" data-modal-id="modal7">
-      <img src="Pictures/train.png" class="project-img" alt="…">
+      <img src="Pictures/cafesumire.png" class="project-img" alt="…">
       <div class="project-info">
         <h3>Cafe Sumire</h3>
         <p>Built a Cafe Website HTML/CSS/JS</p>
@@ -346,7 +346,7 @@
    <!-- Project #9 -->
   <div class="project-item">
     <div class="project-card" data-modal-id="modal9">
-      <img src="Pictures/train.png" class="project-img" alt="…">
+      <img src="Pictures/ako.png" class="project-img" alt="…">
       <div class="project-info">
         <h3>AKO by Lee Webite</h3>
         <p>Built a Cafe Website HTML/CSS/JS</p>
