Added Mobile Compatability

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   <header id="navbar" >
     
     <nav>
+
       <!-- main menu -->
     <ul class="main-menu">
       <li><a href="#home">home</a></li>
@@ -43,7 +44,7 @@
     <!-- social icons -->
     <ul class="social-menu">
       <!-- new Resume link: -->
-      <li><a href="#" id="resume-icon" rel="noopener">
+      <li><a href="#" class="resume-icon" rel="noopener">
         <img src="Pictures/resume-white.png" alt="Resume" class="icon">
       </a></li>
       <li><a href="https://instagram.com/_sic.rick_" target="_blank" rel="noopener">
@@ -106,14 +107,16 @@
 
     <!-- EDUCATION SECTION -->
     <section id="education" class="education-section">
-      <div class="education-container">
-        <div class="education-text">
-          <h2>education</h2>
-          <p>
-        I attended Cal Poly Pomona studying my Bachelor’s in Electical Computer Engineering! I decided to do ECE because I was very interested in working with Computer Science software, but I also liked working with the hardware of Electrical Engineering. I took various classes such as Digital Verilog Design, Control Systems Engineering, Electrical Circuit Analysis. My favorite class was Microelectronics, dealing with diodes, transistors and BJTs.
-      </p>
-    </div>
-    <img src="Pictures/cpp.png" alt="C++ Logo" class="education-img">
+<div class="education-container">
+  <div class="education-img-wrapper">
+    <img src="Pictures/cpp.png" alt="Cal Poly Pomona Logo" class="education-img" />
+  </div>
+  <div class="education-text">
+    <h2>education</h2>
+    <p>
+      I attended Cal Poly Pomona studying my Bachelor’s in Electrical Computer Engineering. I chose ECE because I was drawn to both computer science software and electrical hardware. I’ve taken courses like Digital Verilog Design, Control Systems Engineering, and Electrical Circuit Analysis. My favorite was Microelectronics, which covered diodes, transistors, and BJTs.
+    </p>
+  </div>
   </div>
 </section>
 
@@ -124,10 +127,12 @@
       <img src="Pictures/work1.jpg" alt="Work image 1" class="work-img">
       <img src="Pictures/work2.png" alt="Work image 2" class="work-img">
       <img src="Pictures/work3.png" alt="Work image 3" class="work-img">
+      <img src="Pictures/work4.png" alt="Work image 4" class="work-img">
     </div>
     <div class="work-text">
       <h2>work</h2>
-  <p>I’ve been through various workplaces. My first job was the Summer Youth at Marathon in 2021 where I worked in the Ops Excellence Department. My second job was at Uncle Tetsu in 2023 working as a Bakers Assistant where I baked Japanese cheesecakes and sold cakes to customers. At the end of the year in 2023, I got rehired back at Marathon as a Computer Systems Administrator. In July 2024, I started interning at LMNL Dance Studio as one of their video editors. My most recent workplaces were LMNL Space and Marathon where I ended in May of 2025.</p>
+  <p>I’ve gained a diverse range of experiences across several industries. My career began in 2021 as a Summer Youth intern in the Operations Excellence Department at Marathon Petroleum. In 2023, I worked as a Baker’s Assistant at Uncle Tetsu, where I prepared Japanese cheesecakes and provided customer service. Later that year, I was rehired at Marathon as a Computer Systems Administrator, supporting internal systems and operations.</p>
+  <p>In 2024, I joined LMNL Dance Studio as a Video Editor, creating digital content to promote the studio’s events and programs. My most recent roles at LMNL and Marathon concluded in May 2025. Currently, I’m working as an IT Intern at Chint Power Systems, where I assist with system administration, technical troubleshooting, and network support.</p>
     </div>
   </div>
 </section>
@@ -396,7 +401,8 @@
     <div class="footer-section">
       <h4>Follow Me</h4>
       <ul class="footer-social">
-              <li><a href="#" id="resume-icon" rel="noopener">
+        
+        <li><a href="javascript:void(0)" class="resume-icon" rel="noopener">
         <img src="Pictures/resume-white.png" alt="Resume" class="icon">
       </a></li>
       <li><a href="https://instagram.com/_sic.rick_" target="_blank" rel="noopener">
