--- a/index.html
+++ b/index.html
@@ -69,21 +69,21 @@
         <div class="resume-item">
           <button class="resume-toggle">ECE Resume</button>
           <div class="resume-content">
-            <embed src="Resume/ece.pdf" type="application/pdf" width="100%" height="400px" />
+            <embed src="Resume/Rick Unite ECE Resume.pdf" type="application/pdf" width="100%" height="400px" />
           </div>
         </div>
 
         <div class="resume-item">
           <button class="resume-toggle">IT Resume</button>
           <div class="resume-content">
-            <embed src="Resume/it.pdf" type="application/pdf" width="100%" height="400px" />
+            <embed src="Resume/Rick Unite IT Resume.pdf" type="application/pdf" width="100%" height="400px" />
           </div>
         </div>
 
         <div class="resume-item">
           <button class="resume-toggle">Customer Service Resume</button>
           <div class="resume-content">
-            <embed src="Resume/cust.pdf" type="application/pdf" width="100%" height="400px" />
+            <embed src="Resume/Rick Unite Customer Service Resume.pdf" type="application/pdf" width="100%" height="400px" />
           </div>
         </div>
 
