--- a/index.html
+++ b/index.html
@@ -74,42 +74,39 @@
     <div class="resume-accordion">
 
       <!-- ECE Resume -->
-      <div class="resume-item">
-        <button class="resume-toggle">
-          <span>ECE Resume</span>
-        </button>
-        <div class="resume-content">
-          <div class="resume-viewer">
-            <div class="resume-viewer-toolbar">
-              <div class="resume-viewer-title">
-                <span class="resume-doc-label">PDF</span>
-                <span class="resume-doc-name">Rick Unite ECE Resume</span>
-              </div>
+<div class="resume-item">
+  <button class="resume-toggle">
+    <span>ECE Resume</span>
+  </button>
+  <div class="resume-content">
+    <div class="resume-viewer">
+      <div class="resume-viewer-toolbar">
+        <div class="resume-viewer-title">
+          <span class="resume-doc-label">PDF</span>
+          <span class="resume-doc-name">Rick Unite ECE Resume</span>
+        </div>
 
-              <div class="resume-viewer-actions">
-                <a href="Resume/Rick Unite ECE Resume.pdf"
-                   target="_blank"
-                   class="viewer-btn">
-                  Open in new tab
-                </a>
-                <a href="Resume/Rick Unite ECE Resume.pdf"
-                   download
-                   class="viewer-btn viewer-btn-outline">
-                  Download
-                </a>
-              </div>
-            </div>
-
-            <div class="resume-viewer-body">
-              <iframe
-                class="resume-pdf-frame"
-                src="Resume/Rick Unite ECE Resume.pdf#toolbar=0&navpanes=0"
-                title="Rick Unite ECE Resume PDF">
-              </iframe>
-            </div>
-          </div>
+        <div class="resume-viewer-actions">
+          <!-- Open in new tab (preview) -->
+          <a href="Resume/Rick_Unite_ECE_Resume.pdf"
+             target="_blank"
+             class="viewer-btn">
+            Open in new tab
+          </a>
         </div>
       </div>
+
+      <div class="resume-viewer-body">
+        <iframe
+          class="resume-pdf-frame"
+          src="Resume/Rick_Unite_ECE_Resume.pdf#toolbar=0&navpanes=0"
+          title="Rick Unite ECE Resume PDF">
+        </iframe>
+      </div>
+    </div>
+  </div>
+</div>
+
 
     </div>
   </div>
