changed resume and added smiley face

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </div>
 
 <!-- NAME APPEARS IN CENTER -->
-  <div class="hero-text">welcome</div>
+  <div class="hero-text">welcome :)</div>
 
 
   <!-- 2) NAVBAR (fixed on scroll) -->
