Added docx file

--- a/index.html
+++ b/index.html
@@ -88,13 +88,22 @@
         </div>
 
         <div class="resume-viewer-actions">
-          <!-- Open in new tab (preview) -->
-          <a href="Resume/Rick_Unite_ECE_Resume.pdf"
-             target="_blank"
-             class="viewer-btn">
-            Open in new tab
-          </a>
-        </div>
+
+  <!-- Open PDF -->
+  <a href="Resume/Rick_Unite_ECE_Resume.pdf"
+     target="_blank"
+     class="viewer-btn">
+    Open PDF
+  </a>
+
+  <!-- Download DOCX -->
+  <a href="Resume/Rick_Unite_ECE_Resume.docx"
+     class="viewer-btn"
+     download>
+    Download DOCX
+  </a>
+
+</div>
       </div>
 
       <div class="resume-viewer-body">
